Fix unintentional jumps on mobile chrome

--- a/src/components/template/Experience.css
+++ b/src/components/template/Experience.css
@@ -4,3 +4,12 @@
     font-size: 33px;
     margin-top: 35px;
 }
+@media only screen and (max-width: 1169px) {
+    /* .vertical-timeline--animate */
+  .vertical-timeline-element-content.bounce-in {
+      visibility: visible;
+      -webkit-animation: cd-bounce-2-inverse 0.6s;
+      -moz-animation: cd-bounce-2-inverse 0.6s;
+      animation: cd-bounce-2-inverse 0.6s;
+    }
+  }
